crd-middleware-name-issue-8065/resources/ingressroute2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-fantasy---draw
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe-fantasy---draw
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fe-fantasy---draw
    spec:
      containers:
      - command:
        - nginx
        - -g
        - daemon off;
        image: nginx
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fe-fantasy---draw
  namespace: default
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: fe-fantasy---draw
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fe-fantasy---draw
  namespace: default
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`test-traefik-bug.test-domain.com`) && PathPrefix(`/`)
    middlewares:
    - name: fe-fantasy---draw-https-redirect
    services:
    - name: fe-fantasy---draw
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fe-fantasy---draw-https-redirect
  namespace: default
spec:
  redirectScheme:
    permanent: true
    scheme: https
